# VibeLink

./: .gitattributes  .gitignore  AGENTS.md  DESIGN.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.artifacts/: agent-drawer-window.xml  pairing-claimed-recovery.xml  vibelink-after.xml  vibelink-current.xml  vibelink-device-remote-drawer.xml  vibelink-device-remote-split.xml  vibelink-emulator-agent-final.xml  vibelink-emulator-agent-return.xml  vibelink-emulator-final-agent.xml  vibelink-emulator-final-agent2.xml  vibelink-emulator-final-agent3.xml  vibelink-emulator-final-agent4.xml  vibelink-emulator-labels-launch.xml  vibelink-emulator-labels.xml  vibelink-emulator-pair.xml  vibelink-emulator-paired.xml  vibelink-emulator-remote-drawer-final.xml  vibelink-emulator-remote-drawer-isolated.xml  vibelink-emulator-remote-final.xml  vibelink-emulator-remote-short-labels.xml  vibelink-retry.xml
apps/windows/: Cargo.toml  README.md
apps/windows/src/: artifact_http.rs  audio_pipeline_sidecar.rs  audit_http.rs  compression_sidecar.rs  desktop_remote_http.rs  device_http.rs  doctor_http.rs  event_store_sidecar.rs  event_sync_http.rs  file_http.rs  http_frontdoor.rs  main.rs  mcp_session_sidecar.rs  pairing_http.rs  provider_http.rs  public_tunnel.rs  settings_contract.rs  settings_credentials.rs  settings_http.rs  sidecar_protocol.rs  static_http.rs  status_http.rs  status_sidecar.rs  task_http.rs  tool_events_http.rs  tool_events_store.rs  workspace_http.rs  workspace_tree.rs
apps/windows/src/execution_host/: backend.rs  codex_app_server.rs  daemon.rs  mod.rs  protocol.rs  spool.rs  task_scheduler.rs  windows.rs  worker.rs
docs/: android-handoff.md  android-parity-closure-report.md  android-vibelink-gap-report.md  audio-pipeline-sidecar.md  cli-capability-alignment-plan.md  cli-reference-integration.md  codex-app-server-spike.md  codex-desktop-ui-control-spike.md  openapi.json  (+21 more)
(+487 files in other folders)
