[package]
name = "vibelink-windows"
version = "0.1.0"
edition = "2021"
description = "Single-entry Windows launcher for VibeLink bridge and Android QR pairing"
publish = false

[[bin]]
name = "vibelink"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ureq = { version = "2.10", features = ["json"] }
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
