[package]
name = "vibelink-windows"
version = "0.1.0"
edition = "2021"
description = "Single-entry Windows launcher for VibeLink bridge and Android QR pairing"
publish = false

[[bin]]
name = "vibelink"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
qrcode = "0.14"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml_ng = "0.10"
chrono = { version = "0.4", default-features = false, features = ["std"] }
ureq = { version = "2.10", features = ["json"] }
urlencoding = "2.1"
rusqlite = { version = "0.32", features = ["bundled"] }
getrandom = "0.2"
httparse = "1.10"
sha2 = "0.10"
base64 = "0.22"
portable-pty = "0.9"
uuid = { version = "1.11", features = ["v4"] }
tungstenite = "0.24"
zip = { version = "2.4", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_IO",
    "Win32_System_Memory",
    "Win32_System_Pipes",
    "Win32_System_Threading",
] }
